fix: slider spacings

--- a/assets/css/components/slider.css
+++ b/assets/css/components/slider.css
@@ -5,7 +5,7 @@
   gap: var(--gap);
   padding-inline: 1.09rem;
   -webkit-overflow-scrolling: touch;
-  padding-block: var(--gap);
+  padding-block: 0 var(--gap) var(--gap) var(--gap);
   overflow-x: auto;
   overscroll-behavior-x: contain;
   scroll-snap-type: x mandatory;
@@ -35,7 +35,7 @@
     grid-template-columns: repeat(auto-fit, minmax(min(28ch, 100%), 1fr));
   }
   @media (width >= 60em) {
-    padding: var(--gap) 4rem;
+    padding: 0 4rem var(--gap);
   }
 
   & > * {
